# ffgen

./: .gitattributes  Cargo.toml  README.md  build.rs
.github/workflows/: CICD.yml
completions/bash/: fake-feature.bash  ffgen.bash
completions/elvish/: fake-feature.elv  ffgen.elv
completions/fish/: fake-feature.fish  ffgen.fish
completions/powershell/: _fake-feature.ps1  _ffgen.ps1
completions/zsh/: _fake-feature  _ffgen
samples/: driver_stats.yaml  fraud_detection.yaml
src/: cli.rs  core.rs  fake_feature_group.rs  fraud_detection.rs  main.rs  recipe.rs  util.rs
src/feature_group/: fraud_detection.rs  mod.rs
src/schema/: mod.rs  oomstore.rs
