[package]
name = "fake-feature"
version = "0.1.0"
edition = "2021"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "A cli tool to generate fake data for feature store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["wrap_help"] }
clap_generate = "3.0.0-beta.5"
fake = { version = "2.4", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.23", features = ["derive"] }
rand = "0.8"
csv = "1.1"

[profile.release]
lto = true
codegen-units = 1
