[package]
name = "ffgen"
version = "0.3.5"
edition = "2021"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
categories = ["command-line-utilities"]
description = "A fast fake feature generator"
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/oom-ai/ffgen"
homepage = "https://github.com/oom-ai/ffgen"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["wrap_help", "derive"] }
clap_complete = "3.1"
fake = { version = "2.4", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
rand = "0.8"
csv = "1.1"
serde_yaml = "0.9"
erased-serde = "0.3"
anyhow = "1.0"
lazy_static = "1.4"
serde_json = "1.0"
toml = "0.5"
md-5 = "0.10"

[build-dependencies]
clap = { version = "3.1", features = ["wrap_help", "derive"] }
clap_complete = "3.1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
